# rknn_model_pipeline

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  CMakeSettings.json  README.md  build-linux.sh  build.sh  common.h  det_knife.cpp  main.cpp  main_so.cpp  model_func.hpp  model_params.hpp  models.yaml  postprocess.cc  start.sh  test.cpp  yolov8.cc  yolov8.h
doc/: 业务逻辑介绍  业务逻辑介绍.md  算法库函数使用说明.md
include/inter_model/: mobilenet.h  postprocess_yolo.h  rec_image_process.h  resnet18.h  retinanet.hpp  yolo.h  yolo_image_preprocess.h  yolo_postprocess.h  yolov10.h  yolov8.h
include/outer_model/: model_func.hpp  model_params.hpp
include/ppocr/: ppocr_system.h
include/yolov10/: yolov10.h
rk3588_test_pipeline/: CMakeLists.txt  main.cpp  main_so.cpp  model_params.hpp  models.yaml  yolo_image_preprocess.h  yolo_postprocess.h  yolov10.h  yolov8.h
rk3588_test_pipeline/include/: resnet18.h  yolo_image_preprocess.h  yolov8.h
rk3588_test_pipeline/include/inter_model/: retinanet.hpp  yolo_image_preprocess.h
rk3588_test_pipeline/include/outer_model/: model_func.hpp  model_params.hpp
rk3588_test_pipeline/include/utils/: common.h  image_utils.h  rknn_box_priors.h
src/: CMakeLists.txt  main.cpp
src/business_pipeline/: header_det_face_attr.cpp
src/classify_model/: cls_model.cpp  face_attr.cpp  rec_image_process.cpp
src/classify_model/mobilenet/: mobilenet.cc
src/classify_model/resnet18/: rec_hand.cpp  rec_kx_orient.cpp  rec_stat_door.cpp  resnet.cc
src/face/: classify_model.cc  face_attr.cpp  face_det.cpp  face_det_attr.cpp  facedet_yaml.cpp  header_attr.cpp  header_det_attr.cpp  retinaface.cc
src/mobilenet/: mobilenet.cpp  rec_ren_mobilenet.cpp  rec_stat_door.cpp  rec_stat_door_mobilenet.cpp
src/object/: header_det.cpp  phone_det.cpp  retinanet.cc  retinanet_no_post.cc
src/person/: person_attr.cpp  person_det_attr.cpp  postprocess.cc  test.cc  yolov10.cc  yolov10_det_person.cc
src/ppocr/: ppocr_det_rec.cc
src/ppocr/rknpu2/: ppocr_system.cc
src/resnet18/: rec_hand.cpp  rec_kx_orient.cpp  rec_ren.cpp  rec_stat_door.cpp  resnet.cc
src/ssd_det/: face_det.cpp  header_det.cpp  person_det.cpp  phone_det.cpp  retinaface.cc  retinanet.cc
src/tests/: test_cls_acc.cpp  test_det_map.cpp
src/utils/: image_utils.c  model_utils.cpp  str_utils.c
src/yolo_det/: coco_person_det.cpp  det_gun.cpp  det_hand.cpp  det_knife.cpp  det_kx.cpp  det_stat_door.cpp  obb_stick.cpp  person_det.cpp  postprocess.cc  postprocess_yolo.cpp  yolo.cpp  yolo_image_preprocess.cpp  yolo_postprocess.cpp  yolov10.cc  yolov8.cc
src/yolo_pose/: pose_kx_hp.cpp  pose_kx_sz.cpp  pose_ren.cpp
